Add Rector for dev purposes

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     ],
     "require": {
         "nahkampf/ansi-php": "^3.2"
+    },
+    "require-dev": {
+        "rector/rector": "^1.2"
     }
 }
